# IN5X

./: .gitignore  CMakeLists.txt  README.txt  projectUML.mdj
src/: ImageHandler.cpp  ImageHandler.h  ImageTester.cpp  ImageTester.h  Polynome.cpp  Polynome.hpp  ThresholdingHandler.cpp  box.cpp  box.hpp  cannyOperatorHandler.cpp  cannyOperatorHandler.hpp  exampleCodes.h  filePaths.cpp  filePaths.hpp  gaussianBlurHandler.cpp  gaussianBlurHandler.hpp  main.cpp  sobelOperatorHandler.hpp  tangent_descriptor.cpp  tangent_descriptor.hpp  transformPiece.cpp  transformPiece.hpp
src/Reconaissance/: ReconaissanceHandler.cpp  ReconaissanceHandler.h
src/ReconaissancePreparation/: ImageHandler.cpp  ImageHandler.h  Polynome.cpp  Polynome.hpp  ReconaissancePreparationHandler.cpp  ReconaissancePreparationHandler.h  ThresholdingHandler.h  box.cpp  box.hpp  cannyOperatorHandler.cpp  cannyOperatorHandler.hpp  gaussianBlurHandler.hpp  tangent_descriptor.cpp  tangent_descriptor.hpp  transformPiece.cpp  transformPiece.hpp
src/Utilities/: Helper.cpp  Helper.h  ImageTester.cpp  ImageTester.h  databaseHandler.cpp  databaseHandler.hpp  enums.h  filePaths.hpp
